Agregamos el logo y los carros de color rojo modelo 3

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="header">
             <nav class="nav">
                 <a href="#" class="logotipo">
-                    <img src="#" alt="Logotipo">
+                    <img src="./assets/svg/tesla_logotipo.svg" alt="Logotipo" width="140px">
                 </a>
                 <button class="menu">Menu</button>
             </nav>
