Todo la parte den mobile first terminada pero aun falta dar unos retoques pequeños

--- a/index.html
+++ b/index.html
@@ -17,15 +17,131 @@
                 <button class="menu">Menu</button>
             </nav>
         </header>
+
+        <!-----------SECCION DE AUTOS------------ -->
+        <section class="autos_tesla">
+
+            <!---------MODELO 3 ROJO------------->
         <div class="car__red">
-            <picture>
-                <source media="(min-width:980px)" srcset="./assets/img/red_car_desktop.jpg">
-                <source media="(min-width:720px)" srcset="./assets/img/car_red_laptop.jpg">
-                <source media="(min-width:560px)" srcset="./assets/img/car_red_tablet.jpg">
+            <picture class="pictures">
+                <source media="(min-width:600px)" srcset="./assets/img/red_car_desktop.jpg">
                 <img src="./assets/img/car_red_mobile.jpg" alt="">
             </picture>
-            
+            <div class="text">
+                <h1>Model 3</h1>
+                <p>Schedule a Test Drive</p>
+            </div>
+            <div class="botones">
+                <button>Custom Order</button>
+                <button>Existing Inventory</button>
+            </div>
+            <p class="icon_arrow"><img src="./assets/img/down.png" alt=""></p>
         </div>
+
+            <!---------MODELO Y AZUL------------->
+        <div class="car__blue">
+            <picture>
+                <source media="(min-width:600px)" srcset="./assets/img/car_azul_desktop.jpg">
+                <img src="./assets/img/car_azul_mobile.jpg" alt="">
+            </picture>
+            <div class="text">
+                <h1>Model Y</h1>
+                <p>Schedule a Test Drive</p>
+            </div>
+            <div class="botones">
+                <button>Custom Order</button>
+                <button>Existing Inventory</button>
+            </div>
+        </div>
+
+            <!---------MODELO S RED------------->
+        <div class="car__blue">
+            <picture>
+                <source media="(min-width:600px)" srcset="./assets/img/modelo_s_desktop.jpg">
+                <img src="./assets/img/modelo_s_mobile.jpg" alt="">
+            </picture>
+            <div class="text">
+                <h1>Model S</h1>
+                <p>Schedule a Test Drive</p>
+            </div>
+            <div class="botones">
+                <button>Custom Order</button>
+                <button>Existing Inventory</button>
+            </div>
+        </div>
+
+            <!---------MODELO X WHITE------------->
+        <div class="car__blue">
+            <picture>
+                <source media="(min-width:600px)" srcset="./assets/img/car_white_desktop.jpg">
+                <img src="./assets/img/car_white_mobile.jpg" alt="">
+            </picture>
+            <div class="text">
+                <h1>Model X</h1>
+                <p>Schedule a Test Drive</p>
+            </div>
+            <div class="botones">
+                <button>Custom Order</button>
+                <button>Existing Inventory</button>
+            </div>
+        </div>
+
+            <!---------SOLAR PANEL------------->
+        <div class="car__blue">
+            <picture>
+                <source media="(min-width:600px)" srcset="./assets/img/panel_desktop.jpg">
+                <img src="./assets/img/panel_mobile.jpg" alt="">
+            </picture>
+            <div class="text">
+                <h1>Solar Panels</h1>
+                <p>Lowest Cost solar Panels in America</p>
+            </div>
+            <div class="botones">
+                <button>Order Now</button>
+                <button>Learn More</button>
+            </div>
+        </div>
+
+            <!---------SOLAR ROOF------------->
+        <div class="car__blue">
+            <picture>
+                <source media="(min-width:600px)" srcset="./assets/img/solar_desktop.webp">
+                <img src="./assets/img/solar_mobile.webp" alt="">
+            </picture>
+            <div class="text">
+                <h1>Solar Roof</h1>
+                <p>Produce Clean energy From Your Roof</p>
+            </div>
+            <div class="botones">
+                <button>Order Now</button>
+                <button>Learn More</button>
+            </div>
+        </div>
+
+            <!---------ACCESORIOS------------->
+        <div class="car__blue">
+            <picture>
+                <source media="(min-width:555px)" srcset="./assets/img/accesorios_desktop.jpg">
+                <img src="./assets/img/accesorios_mobile.jpg" alt="">
+            </picture>
+            <div class="text">
+                <h1>Accessories</h1>
+            </div>
+            <div class="botones">
+                <button>Shop Now</button>
+            </div>
+        </div>
+
+        </section>
+
+        <!----------------FOOTER-------------------------->
+        <footer class="footer">
+            <p>Tesla © 2022</p>
+            <p>Privacy & Legal</p>
+            <p>Vehicle Recalls</p>
+            <p>Careers</p>
+            <p>News</p>
+        </footer>
     </div>    
 </body>
 </html>
