Modifique las medidas de cada cajita de autos a un height del 100vh para que me ocupe toda la pantalla cada cajita

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 <button>Custom Order</button>
                 <button>Existing Inventory</button>
             </div>
-            <p class="icon_arrow"><img src="./assets/img/down.png" alt=""></p>
+            <p class="icon_arrow"><a href="#car_blue_modelY"><img src="./assets/img/down.png" alt=""></a></p>
         </div>
 
             <!---------MODELO Y AZUL------------->
-        <div class="car__blue">
+        <div class="car__blue" id="car_blue_modelY">
             <picture>
                 <source media="(min-width:600px)" srcset="./assets/img/car_azul_desktop.jpg">
                 <img src="./assets/img/car_azul_mobile.jpg" alt="">
