Aplique los media queries a los botones  para tratar de encajarlos correctamente

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <h1>Solar Roof</h1>
                 <p>Produce Clean energy From Your Roof</p>
             </div>
-            <div class="botones">
+            <div class="botones ">
                 <button>Order Now</button>
                 <button>Learn More</button>
             </div>
@@ -141,6 +141,8 @@
             <p>Vehicle Recalls</p>
             <p>Careers</p>
             <p>News</p>
+            <p>Engage</p>
+            <p>Location</p>
         </footer>
     </div>    
 </body>
