Creamos nuestro archicho index.js y agregamos los id al menu y imagen de closeMenu

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
                 <a href="#" class="logotipo">
                     <img src="./assets/svg/tesla_logotipo.svg" alt="Logotipo" width="120">
                 </a>
-                <button class="menu">Menu</button>
+                <button class="menu" id="menu">Menu</button>
                 
         <!------ASIDE MENU----------- -->
-        <aside class="aside">
+        <aside class="aside" id="aside">
             <div class="aside__header">
                 <div class="container_icon_close">
-                    <img src="./assets/img/close.png" alt="close_menu" width="24px">
+                    <img id="close_menu" src="./assets/img/close.png" alt="close_menu" width="24px">
                 </div>
             </div>
             <div class="aside__text">
@@ -217,6 +217,7 @@
             
         </aside>
 
-    </div>    
+    </div>  
+    <script src="./js/menu.js"></script>  
 </body>
 </html>
