Modificamos los archivos dando los ultimo retoques en media queries y haciendo la navegacion para desktop

--- a/index.html
+++ b/index.html
@@ -14,13 +14,44 @@
                 <a href="#" class="logotipo">
                     <img src="./assets/svg/tesla_logotipo.svg" alt="Logotipo" width="120">
                 </a>
+                <ul class="lista">
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Model S</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Model 3</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Model X</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Model Y</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Solar Roof</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Solar Panels</a>
+                    </li>
+                    
+                </ul>
+                <div>
+                    <ul class="lista">
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Shop</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Account</a>
+                        </li>
+                    </ul>
+                </div>
                 <button class="menu" id="menu">Menu</button>
                 
         <!------ASIDE MENU----------- -->
-        <aside class="aside" id="aside">
+        <aside class="aside">
             <div class="aside__header">
                 <div class="container_icon_close">
-                    <img id="close_menu" src="./assets/img/close.png" alt="close_menu" width="24px">
+                    <img id="close_menu" src="./assets/img/close.png" alt="close_menu" width="18px">
                 </div>
             </div>
             <div class="aside__text">
